fixed header on small devices

--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -38,14 +38,6 @@
       display: inline;
       margin-left: 1em;
     }
-    @media (max-width: 1100px) {
-      ul {
-        display: inline-block;
-        padding-top: $padding-small;
-        text-align: left;
-        width: 100%;
-      }
-    }
     li.lang {
       float: right;
     }
